--- a/settings.ini
+++ b/settings.ini
@@ -6,6 +6,9 @@ forwardx11 = yes
 
 [Running.Settings]
 lasttradedate = 20241122
+lasttradedate22 = 20241122
+lasttradedatexshg = 20241122
+lasttradedate_xshg = 20241122
 
 [topsecret.server.example]
 port = 50022
