优化代码 Changes to be committed: 	modified:   __pycache__/get_Data_Tools.cpython-313.pyc 	deleted:    data_processor.py 	modified:   get_Data_Tools.py 	modified:   get_Stock_Data.py 	deleted:    logs/stock_analyzer.log 	new file:   output/result_df.csv 	modified:   result_df.csv 	modified:   settings.ini 	deleted:    stock_data_analyzer.py 	deleted:    tools.py 	new file:   utils.py

--- a/settings.ini
+++ b/settings.ini
@@ -6,6 +6,8 @@ forwardx11 = yes
 
 [Running.Settings]
 lasttradedate_xshg = 20241126
+lasttradedate22 = 20241122
+lasttradedate = 20241127
 
 [topsecret.server.example]
 port = 50022
