--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,29 @@
+# Output directory
+output/
+output/*
+output/*.csv
+
 # Python
 __pycache__/
 *.py[cod]
 *$py.class
-
-# Distribution / packaging
-dist/
+*.so
+.Python
 build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
 *.egg-info/
-
-# Virtual Environment
-venv/
-env/
-.env/
+.installed.cfg
+*.egg
 
 # IDE
 .idea/
@@ -19,17 +31,12 @@ env/
 *.swp
 *.swo
 
-# Local development settings
+# Environment
 .env
-.env.local
+.venv
+env/
+venv/
+ENV/
 
-# Logs
-*.log
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-coverage.xml
-*.cover
+# Config
+config/settings.ini
